main/default/objects/Supplier__c/Supplier__c.object-meta.xml
<CustomObject>
    <description>Supplier or Vendor</description>
    <label>Supplier</label>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>