main/default/objects/Supplier__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>Address Line 1</description>
    <inlineHelpText>Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>