main/default/objects/Supplier__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Supplier Category</description>
    <inlineHelpText>Supplier Category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>non-Food</fullName>
                <default>true</default>
                <label>non-Food</label>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>