main/default/objects/Supplier__c/fields/Certificate_Of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Of_Insurance__c</fullName>
    <description>Certificate of Insurance</description>
    <inlineHelpText>Certificate of Insurance</inlineHelpText>
    <label>Certificate Of Insurance</label>
    <type>Date</type>
</CustomField>