main/default/objects/Supplier__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City</description>
    <inlineHelpText>City</inlineHelpText>
    <label>City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>