main/default/objects/Supplier__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Contact Email</description>
    <inlineHelpText>Contact Email</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>