main/default/objects/Supplier__c/fields/Contract_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Contract_Compliant__c</fullName>
    <formula>IF(ISPICKVAL( Supplier_Status__c, "Delisted"), "Discontinued", 
 IF(AND( ISPICKVAL( Supplier_Status__c, "Active") ,  
        Contract_Signed__c  = True) ,"Compliant" ,"Non Compliant") )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Compliant</label>
    <type>Text</type>
</CustomField>