main/default/objects/Supplier__c/fields/Contract_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Receive_Date__c</fullName>
    <description>Contract Receive Date</description>
    <inlineHelpText>Contract Receive Date</inlineHelpText>
    <label>Contract Receive Date</label>
    <type>Date</type>
</CustomField>