main/default/objects/Supplier__c/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Contract Signed</description>
    <inlineHelpText>Contract Signed</inlineHelpText>
    <label>Contract Signed</label>
    <type>Checkbox</type>
</CustomField>