main/default/objects/Supplier__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>Contract Signed Date</description>
    <inlineHelpText>Contract Signed Date</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>