main/default/objects/Supplier__c/fields/Control_Brand_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Control_Brand_Vendor__c</fullName>
    <label>Control Brand Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>