main/default/objects/Supplier__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Supplier</relationshipLabel>
    <relationshipName>Supplier</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>