main/default/objects/Supplier__c/fields/Document_Reference__c.field-meta.xml
<CustomField>
    <fullName>Document_Reference__c</fullName>
    <description>Documentation Reference</description>
    <inlineHelpText>Documentation Reference</inlineHelpText>
    <label>Document Reference</label>
    <type>Url</type>
</CustomField>