main/default/objects/Supplier__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Fax</description>
    <inlineHelpText>Fax</inlineHelpText>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>