main/default/objects/Supplier__c/fields/GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>GeoLocation__c</fullName>
    <description>GeoLocation</description>
    <inlineHelpText>GeoLocation</inlineHelpText>
    <label>GeoLocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>