main/default/objects/Supplier__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization</description>
    <inlineHelpText>Organization</inlineHelpText>
    <label>Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Unit 1</fullName>
                <default>true</default>
                <label>Business Unit 1</label>
            </value>
            <value>
                <fullName>Business Unit 2</fullName>
            </value>
            <value>
                <fullName>Business Unit 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>