main/default/objects/Supplier__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone Number</description>
    <inlineHelpText>Phone Number</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>