main/default/objects/Supplier__c/fields/Prev_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Prev_Supplier_Name__c</fullName>
    <description>Previous Supplier Name</description>
    <inlineHelpText>Previous Supplier Nam</inlineHelpText>
    <label>Prev Supplier Name</label>
    <length>35</length>
    <type>Text</type>
</CustomField>