main/default/objects/Supplier__c/fields/PSTL_Code__c.field-meta.xml
<CustomField>
    <fullName>PSTL_Code__c</fullName>
    <description>Postal Code</description>
    <inlineHelpText>Postal Code</inlineHelpText>
    <label>PSTL Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>