main/default/objects/Supplier__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Country__c</field>
            <operation>equals</operation>
            <valueField>Region__c.Country__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Supplier</relationshipLabel>
    <relationshipName>SupplierRegion</relationshipName>
    <type>Lookup</type>
</CustomField>