main/default/objects/Supplier__c/fields/Supplier_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Agreement__c</fullName>
    <description>Supplier Agreement Type</description>
    <inlineHelpText>Supplier Agreement Type</inlineHelpText>
    <label>Supplier Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Resisted</fullName>
            </value>
            <value>
                <fullName>Addendum Agreement</fullName>
            </value>
            <value>
                <fullName>Specific Supplier Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>