main/default/objects/Supplier__c/fields/Supplier_Compliant_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Compliant_Status__c</fullName>
    <formula>AND(  ISPICKVAL(  Supplier_Status__c  , "Active"),
NOT(ISBLANK(  Contract_Signed_Date__c  )),
  Certificate_Of_Insurance__c  >= TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Compliant Status</label>
    <type>Checkbox</type>
</CustomField>