main/default/objects/Supplier__c/fields/Supplier_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name_2__c</fullName>
    <description>Supplier Name 2</description>
    <inlineHelpText>Supplier Name 2</inlineHelpText>
    <label>Supplier Name 2</label>
    <length>35</length>
    <type>Text</type>
</CustomField>