main/default/objects/Supplier__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <description>Supplier Number</description>
    <displayFormat>{0000000}</displayFormat>
    <inlineHelpText>Supplier Number</inlineHelpText>
    <label>Supplier Number</label>
    <type>AutoNumber</type>
</CustomField>