main/default/objects/Supplier__c/fields/Supplier_Status__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Status__c</fullName>
    <description>Supplier Status</description>
    <inlineHelpText>Supplier Status</inlineHelpText>
    <label>Supplier Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Delisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>