main/default/objects/Supplier__c/fields/Supplier_Tax_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Tax_Number__c</fullName>
    <description>Supplier Tax Number</description>
    <inlineHelpText>Supplier Tax Number</inlineHelpText>
    <label>Supplier Tax Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>