main/default/objects/Supplier__c/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <description>Supplier Type</description>
    <inlineHelpText>Supplier Type</inlineHelpText>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
                <default>true</default>
                <label>Offshore</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>