main/default/objects/Supplier__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Supplier Website</description>
    <inlineHelpText>Supplier Website</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>