main/default/objects/Supplier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Supplier_Number__c</columns>
    <columns>NAME</columns>
    <columns>Address_Line_1__c</columns>
    <columns>Country__c</columns>
    <columns>Supplier_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>